# TensorVoting

./: BoundingPolygon.cxx  CMakeLists.txt  FindBoundary.cxx  Helpers.cxx  Helpers.h  ImageToPoints.cxx  TensorVoting.cxx  Todo.txt  Types.h
data/: OutlineApproximation.vtp  OutlineGraph.vtp  StraigtnessGraph.vtp  rough.vtp
data/blob/: OutlineApproximation.vtp  OutlineGraph.vtp  StraigtnessGraph.vtp  rough.vtp
data/rectangleSolid/: rectangleSolid.vtp
